Upload HTML manuals too

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -41,10 +41,17 @@ jobs:
       - uses: wilfwilson/compile-documentation-for-packages@make_doc_script
         with:
           use-latex: 'true'
-      - name: 'Upload documentation'
+      - name: 'Upload PDF documentation'
         uses: actions/upload-artifact@v2
         with:
-          name: sonata-manual-pdf
+          name: sonata-manuals-pdf
           path: |
             ./doc/ref/manual.pdf
             ./doc/tut/manual.pdf
+      - name: 'Upload HTML manuals'
+        uses: actions/upload-artifact@v2
+        with:
+          name: sonata-manuals-html
+          path: |
+            ./htm/ref/*.htm
+            ./htm/tut/*.htm
